--- a/main.css
+++ b/main.css
@@ -36,6 +36,10 @@ header h1 {
     margin-top: 25vh;
 }
 
+header p {
+    margin: 0;
+}
+
 
 /* begin scroll down link */
 
@@ -88,6 +92,8 @@ form {
     margin: 0 auto;
     padding: 0 10px 0 10px;
     border-radius: 5px;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 
 fieldset {
@@ -97,6 +103,9 @@ fieldset {
 legend {
     font-size: 1.2em;
     padding-top: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid black;
+    border-radius: 10px;
 }
 
 ul {
@@ -145,13 +154,15 @@ input[type=submit] {
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
-    margin-top: 10vh;
+    width: 100%;
 }
 
 #results {
     background-color: lightgrey;
     width: 90%;
     margin: 0 auto;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 
 .result-block {
@@ -203,3 +214,81 @@ input[type=submit] {
 
 
 /* on wider screens: private/outfitter radios in same line as class checkboxes. two different blocks side-by-side so that the river list sits below them both */
+
+@media only screen and (min-width: 600px) {
+    header h1 {
+        font-size: 2.5em;
+    }
+
+    h2 {
+        font-size: 2em;
+    }
+
+    h3 {
+        font-size: 1.2em;
+    }
+
+    form {
+        width: 80%;
+    }
+}
+
+@media only screen and (min-width: 900px) {
+    body {
+        font-size: 1.15em;
+    }
+
+    header h1 {
+        font-size: 4em;
+    }
+
+    .container {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .result-block {
+        padding: 25px;
+    }
+
+    h2 {
+        font-size: 2.2em;
+    }
+
+    h3 {
+        font-size: 1.5em;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    body {
+        font-size: 1.3em;
+    }
+
+    header h1 {
+        font-size: 5em;
+    }
+
+    .container-2 {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .large-screen {
+        margin-bottom: 25px;
+    }
+
+    .large-screen legend{
+        padding-top: 35px;
+        padding-bottom: 15px;
+    }
+
+    .container-3 {
+        display: flex;
+        justify-content: center;
+    }
+
+    .container-3 legend {
+        padding-bottom: 15px;
+    }
+}
